-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P5
-
Affects Version/s: 9
-
Component/s: hotspot
-
b42
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8083264 | emb-9 | Tobias Hartmann | P5 | Resolved | Fixed | team |
The JFR 'EventCompilerFailure' should be triggered in the top level 'ciEnv::record_failure' instead of 'Compile::record_failure' . Failures that happen during compilation are passed up to ciEnv in 'C2Compiler::compile_method' anyway. However, failures that happen in ciEnv do not trigger an EventCompilerFailure although compilation fails.
For example, "code cache is full" in 'ciEnv::register_method' does not trigger a JFR event but compilation fails.
For example, "code cache is full" in 'ciEnv::register_method' does not trigger a JFR event but compilation fails.
- backported by
-
JDK-8083264 Failed compilation does not always trigger a JFR event 'CompilerFailure'
-
- Resolved
-