8065339: Failed compilation does not always trigger a JFR event 'CompilerFailure'

CompilerFailure JFR event should be triggered in ciEnv.

Reviewed-by: kvn